<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">




    <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


        <RelativeLayout
            android:id="@+id/relative_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relative_1"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Today Insights"
                    android:textColor="@color/color2"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/tview_heading"
                    android:textStyle="bold"
                    />


                <LinearLayout
                    android:id="@+id/layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/tview_heading"
                    android:layout_marginTop="15dp"
                    android:weightSum="2">


                    <android.support.v7.widget.CardView
                        android:layout_width="400dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:id="@+id/cview_1"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/total_appointments_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/text_activeEmployees"
                                android:textColor="@color/colorWhite"
                                android:textSize="15sp"/>

                            <TextView
                                android:id="@+id/total_appointments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/total_appointments_value"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:text="@string/text_activeEmployeesValue"
                                android:textSize="30sp"
                                android:textColor="@color/colorWhite"
                                />


                        </RelativeLayout>


                    </android.support.v7.widget.CardView>


                    <RelativeLayout
                        android:id="@+id/view_horizontal1"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"

                        >

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#99EFEFF4" />
                    </RelativeLayout>


                    <android.support.v7.widget.CardView
                        android:layout_width="400dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:id="@+id/cview_2"

                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/cancelled_Appointments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:text="@string/text_answeredCalls"
                                android:textColor="@color/colorWhite"
                                android:textSize="15sp" />

                            <TextView

                                android:id="@+id/tv_cancelled_appointments"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cancelled_Appointments"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:text="@string/text_activeEmployeesValue"
                                android:textColor="@color/colorWhite"
                                android:textSize="30sp" />


                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


                <View
                    android:id="@+id/view_1"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@id/layout_1"
                    android:background="#99EFEFF4" />


                <LinearLayout
                    android:id="@+id/layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@id/view_1"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <android.support.v7.widget.CardView
                        android:layout_width="400dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:id="@+id/cview_3"

                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/total_earnings_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/text_followUps"
                                android:textColor="@color/colorWhite"                                    android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tview_total_earnings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/total_earnings_value"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:textColor="@color/colorWhite"
                                android:text="@string/text_activeEmployeesValue"
                                android:textSize="30sp" />


                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                    <RelativeLayout
                        android:layout_width="20dp"
                        android:layout_height="match_parent">

                        <View
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="#99EFEFF4"

                            />


                    </RelativeLayout>


                    <android.support.v7.widget.CardView
                        android:layout_width="400dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:id="@+id/cview_4"

                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/today_earnings_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:text="@string/text_unansweredCalls"
                                android:textColor="@color/colorWhite"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tview_today_earnings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/today_earnings_value"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:text="@string/text_activeEmployeesValue"
                                android:textColor="@color/colorWhite"
                                android:textSize="30sp" />

                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Employee Insights"
        android:textColor="@color/color2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        />




    <android.support.v7.widget.SearchView
        android:id="@+id/searchManagers"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        app:queryBackground="@android:color/transparent"
        android:iconifiedByDefault="false"
        android:background="@color/colorWhite"
        app:searchIcon="@drawable/ic_search"
        android:visibility="visible"
        app:queryHint="Search by name"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />





    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_CompanyEmployees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />



    <ImageView
        android:id="@+id/btn_addManagers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_plus"


        />

    </android.support.design.widget.CoordinatorLayout>



