<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".Collapsing">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/change_Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

            <RelativeLayout
                android:id="@+id/layoutTopID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_collapseMode="parallax">


                <RelativeLayout
                    android:id="@+id/layout_MerchantInformation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/white">

                    <RelativeLayout
                        android:id="@+id/relative_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">


                        <RelativeLayout
                            android:id="@+id/relative_header"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@color/colorPrimary">


                            <ImageView
                                android:id="@+id/btn_deleteCompany"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="15dp"
                                android:src="@drawable/ic_bin" />


                            <ImageView
                                android:id="@+id/btn_editCompany"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:layout_marginRight="15dp"
                                android:layout_toLeftOf="@id/btn_deleteCompany"
                                android:src="@drawable/ic_edit"

                                />

                            <TextView
                                android:id="@+id/tview_profile_cName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/btn_editCompany"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="8dp"
                                android:text="@string/text_companiesName"
                                android:textColor="@color/colorWhite"
                                android:textSize="17sp" />


                        </RelativeLayout>


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_Company"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_below="@id/relative_header"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="-62dp"
                            android:src="@mipmap/ic_launcher_round" />


                        <RelativeLayout
                            android:id="@+id/relative_allInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_Company"
                            android:layout_marginTop="15dp">

                            <LinearLayout
                                android:id="@+id/linear_companyID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="8dp">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="25dp"
                                    android:src="@drawable/ic_company_id"

                                    />

                                <TextView
                                    android:id="@+id/tview_profile_companyID"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="25dp"
                                    android:text="@string/text_companyID"
                                    android:textColor="@color/textColor"
                                    android:textSize="17sp" />


                            </LinearLayout>


                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/relative_allInfo"
                            android:background="#FFFFFF">

                            <TextView
                                android:id="@+id/tview_list_of_Companies"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="17dp"
                                android:text="@string/text_listOfManagers"
                                android:textColor="@color/colorPrimary"
                                android:textSize="20sp" />


                            <android.support.v7.widget.SearchView
                                android:id="@+id/searchManagers"
                                android:layout_below="@+id/tview_list_of_Companies"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginLeft="7dp"
                                android:layout_marginRight="7dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                app:queryBackground="@android:color/transparent"
                                android:iconifiedByDefault="false"
                                android:background="@color/colorWhite"
                                app:searchIcon="@drawable/ic_search"
                                android:visibility="visible"
                                app:queryHint="Search by name" />

                        </RelativeLayout>


                    </RelativeLayout>


                </RelativeLayout>


            </RelativeLayout>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>





    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_CompanyEmployees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />



    <ImageView
        android:id="@+id/btn_addManagers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_plus"


        />



</android.support.design.widget.CoordinatorLayout>